[package]
name = "aarch64-std"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "implementations of standard library components for bare-metal aarch64"
homepage = "https://github.com/ccbrown/aarch64-std"
repository = "https://github.com/ccbrown/aarch64-std"
readme = "README.md"
keywords = ["aarch64", "embedded", "bare-metal", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[package.metadata.docs.rs]
targets = ["aarch64-unknown-linux-gnu"]

[features]
default = ["alloc"]
alloc = []

[dependencies]
aarch64-cpu = "9.2.0"
tock-registers = "0.8.0"
